# ConvexHull

./: CMakeLists.txt  CMakeLists_old.txt  README.md
data/: Output.stl  Spanner_Output.stl
include/: ConvexHull.h  StlFile.h
qhull/Debug/: qconvex.ilk  qdelaunay.ilk  qhalf.ilk  qhull.ilk  qhull_d.exp  qhull_d.ilk  qhull_d.lib  qhull_pd.exp  qhull_pd.ilk  qhull_pd.lib  qhull_rd.exp  qhull_rd.ilk  qhull_rd.lib  qhullp.ilk  qhullstatic_d.lib  qhullstatic_rd.lib  qvoronoi.ilk  rbox.ilk  testqset.ilk  testqset_r.ilk  user_eg.ilk  user_eg2.ilk  user_eg3.ilk  user_egp.ilk
qhull/Release/: qhull_r.exp  qhull_r.lib  qhullcpp.lib  qhullstatic.lib  qhullstatic_r.lib
src/: ConvexHull.cpp  StlFile.cpp  TestDll.cpp  main.cpp
